# pcs_2026

./: test.txt
Esercitazione1/: printargs.cpp
esercitazione1/build4/: CMakeCache.txt  Makefile  cmake_install.cmake  esercizio1
esercitazione3/: CMakeLists.txt  main.cpp  rational.h
esercitazione4/: CMakeLists.txt
esercitazione8/: CMakeLists.txt  test.cpp  undirected_graph.h
esercitazione9/: CMakeLists.txt  algoritmi_visita.h  coda_pila.h  undirected_graph.h  utilizzo_AI.txt  visite_grafi.cpp
